--- a/index.html
+++ b/index.html
@@ -139,20 +139,20 @@
           <li class="search-li">
             <button id="plane-btn-search" class="search-btn">
               <img src="./assets/plane.svg" alt="flight-btn" id="plane-search-img" class="btnImg">
-              Авиабилеты
+              АВИАБИЛЕТЫ
             </button>
           </li>
           <li class="search-li">
             <button id="hotel-btn-search" class="search-btn">
               <img  src="./assets/bed.svg" alt="hotels-btn" id="hotel-search-img" class="btnImg">
-              Отели
+              ОТЕЛИ
             </button>
           </li>
           <li class="search-li">
             <a  onclick="ym(65631823, 'reachGoal', 'tours'); return true;" class="" target="_blank" href="/tours">
               <button id="tours-btn-search" class="search-btn mobile-btn">
                 <img src="./assets/tours.svg" alt="tour-btn" id="tours-search-img" class="btnImg">
-                Туры
+                ТУРЫ
               </button>
             </a>
           </li>
