--- a/index.html
+++ b/index.html
@@ -743,6 +743,27 @@ setTimeout(() => {
 
 
 
+<style type="text/css"> 
+
+.mewtwo-widget--9c99103bca8edefc000ca44fb8b38b5a .mewtwo-show_hotels__label { display: none!important;
+}
+
+.mewtwo-widget--9c99103bca8edefc000ca44fb8b38b5a .mewtwo-flights .mewtwo-custom_checkbox_wrapper { display: none!important;
+}
+.mewtwo-show_hotels-checkbox{
+  display: none!important;
+}
+</style>
+
+
+
+
+
+
+
+
+
+
 
 
 
