fix to thailand travel

--- a/blogs/thailand-travel.html
+++ b/blogs/thailand-travel.html
@@ -97,6 +97,8 @@
         background: url(../../../assets/articles/thailand-travel/header.jpg);
         background-attachment: fixed;
         background-position: bottom;
+        background-repeat: no-repeat;
+        background-size: cover;
       "
     >
       <nav class="phone-nav">
