fix to thailand travel

--- a/sitemap.html
+++ b/sitemap.html
@@ -19,10 +19,10 @@
     <div class="phone-menu">
         <ul class="phone-ul">
             <li class="phone-li">
-                <a href="/index" class="phone-a">Авиабилеты</a>
+                <a href="/" class="phone-a">Авиабилеты</a>
             </li>
             <li class="phone-li">
-                <a href="/index" class="phone-a">Отели </a>
+                <a href="/" class="phone-a">Отели </a>
             </li>
             <li class="phone-li">
                 <a href="blogs" class="phone-a">Блог</a>
@@ -54,11 +54,11 @@
                 </div>
                 <ul class="site-ul">
                     <li class="site-li">
-                        <a href="/index" class="site-a">Авиабилеты
+                        <a href="/" class="site-a">Авиабилеты
                         </a>
                     </li>
                     <li class="site-li">
-                        <a href="/index" class="site-a">Отели 
+                        <a href="/" class="site-a">Отели 
                         </a>
                     </li>
                     <li class="site-li">
@@ -78,7 +78,7 @@
         <div class="inner">
             <ul class="section-1-ul">
                 <li class="section-1-li">
-                    <a href="./index" class="link-text">
+                    <a href="./" class="link-text">
                         Поиск дешевых авиабилетов и отелей
                     </a>
                 </li>
