centralized footer scss

--- a/blogs.html
+++ b/blogs.html
@@ -8,6 +8,7 @@
       content="В блоге Y-Flights мы расскажем вам про интересные, для туризма, места. О том как выгоднее купить авиабилет или подобрать тур."
     />
     <link rel="stylesheet" href="./styles/blog-page/blog.style.css" />
+    <link rel="stylesheet" href="./styles/global-styles/footer/footer.style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
@@ -429,7 +430,7 @@
     <!-- = = = = = = FOOTER = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =-->
 
     <footer class="center footer">
-      <div class="inner footer-inner">
+      <div class="footer-inner">
         <div class="footer-col-1">
           <h2 class="footer-h2">Обзоры популярных направлений</h2>
 
