--- a/blogs/Phuket.html
+++ b/blogs/Phuket.html
@@ -10,6 +10,7 @@
     Недорогие туры на Пхукет от сервиса Y-Flights.com"
     />
     <link rel="stylesheet" href="./style/phuket/phuket.css" />
+    <link rel="stylesheet" href="../styles/global-styles/footer/footer.style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
@@ -520,7 +521,7 @@
     <!-- = = = = = = FOOTER = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =-->
 
     <footer class="center footer">
-      <div class="inner footer-inner">
+      <div class="footer-inner">
         <div class="footer-col-1">
           <h2 class="footer-h2">Обзоры популярных направлений</h2>
 
