--- a/blogs/Vietnam.html
+++ b/blogs/Vietnam.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Горящие туры во Вьетнам. Подборка тура и поиск дешевых авиабилетов.
     Забронировать отель в Вьетнаме и отлично отдохнуть в любое время года.">
     <link rel="stylesheet" href="./style/Vietnam/vietnam.css">
+    <link rel="stylesheet" href="../styles/global-styles/footer/footer.style.css" />
     <link
     href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
     rel="stylesheet"
@@ -449,7 +450,7 @@ McDonald&#39;s. В соседних Лаосе и Вьетнаме таких п
       <!-- = = = = = = FOOTER = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =-->
   
       <footer class="center footer">
-        <div class="inner footer-inner">
+        <div class="footer-inner">
           <div class="footer-col-1">
             <h2 class="footer-h2">Обзоры популярных направлений</h2>
             
