--- a/blogs/srilanka.html
+++ b/blogs/srilanka.html
@@ -9,6 +9,7 @@
       как добраться. Местные обычаи на острове, достопримечательности острова."
     />
     <link rel="stylesheet" href="./style/sri-lanka/sri-lanka.css" />
+    <link rel="stylesheet" href="../styles/global-styles/footer/footer.style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
@@ -560,7 +561,7 @@
     <!-- = = = = = = FOOTER = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =-->
 
     <footer class="center footer">
-      <div class="inner footer-inner">
+      <div class="footer-inner">
         <div class="footer-col-1">
           <h2 class="footer-h2">Обзоры популярных направлений</h2>
 
