--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta name="keywords" content="Авиабилеты, Отели" />
     <meta name="author" content="Andrew Pinon" />
     <meta name="yandex-verification" content="964657111f55f1b3" />
+    <link rel="stylesheet" href="styles/global-styles/footer/footer.style.css" />
     <link rel="stylesheet" href="styles/index.style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
@@ -465,7 +466,7 @@
       <!-- = = = = = = FOOTER = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =-->
   
       <footer class="center footer">
-        <div class="inner footer-inner">
+        <div class="footer-inner">
           <div class="footer-col-1">
             <h2 class="footer-h2">Обзоры популярных направлений</h2>
             
