--- a/sitemap.html
+++ b/sitemap.html
@@ -8,6 +8,7 @@
         бронированию отелей, поиску дешевых туров и просто советы путешественникам.
     ">
     <link rel="stylesheet" href="./styles/sitemap/sitemap.css">
+    <link rel="stylesheet" href="./styles/global-styles/footer/footer.style.css">
     <link
     href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
     rel="stylesheet"
