--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -9,6 +9,7 @@
       Flights"
     />
     <link rel="stylesheet" href="./styles/term-of-use/term-of-use.css" />
+    <link rel="stylesheet" href="./styles/global-styles/footer/footer.style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
