--- a/tours.html
+++ b/tours.html
@@ -8,6 +8,7 @@
           Выгодные предложения на путевки с вылетом из удобного вам города."
     >
     <link rel="stylesheet" href="./styles/tours-page/tours-page.module.css">
+    <link rel="stylesheet" href="./styles/global-styles/footer/footer.style.css">
     <link
     href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
     rel="stylesheet"
@@ -422,7 +423,7 @@
              <!-- = = = = = = FOOTER = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =-->
   
       <footer class="center footer">
-        <div class="inner footer-inner">
+        <div class="footer-inner">
           <div class="footer-col-1">
             <h2 class="footer-h2">Обзоры популярных направлений</h2>
             
