--- a/blogs/Bali.html
+++ b/blogs/Bali.html
@@ -11,6 +11,7 @@
       ваш отдых более раскрепощенным."
     />
     <link rel="stylesheet" href="./style/bali/bali.css" />
+    <link rel="stylesheet" href="../styles/global-styles/footer/footer.style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
@@ -539,7 +540,7 @@
     <!-- = = = = = = FOOTER = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =-->
 
     <footer class="center footer">
-      <div class="inner footer-inner">
+      <div class="footer-inner">
         <div class="footer-col-1">
           <h2 class="footer-h2">Обзоры популярных направлений</h2>
 
