--- a/blogs/Thailand.html
+++ b/blogs/Thailand.html
@@ -7,6 +7,7 @@
     сервисе вы можете выбрать и приобрести тур в Таиланд согласно ваших
     пожеланий. Пакуем чемоданы?">
     <link rel="stylesheet" href="./style/thailand/thailand.css">
+    <link rel="stylesheet" href="../styles/global-styles/footer/footer.style.css" />
     <link
     href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
     rel="stylesheet"
@@ -412,7 +413,7 @@
       <!-- = = = = = = FOOTER = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =-->
   
       <footer class="center footer">
-        <div class="inner footer-inner">
+        <div class="footer-inner">
           <div class="footer-col-1">
             <h2 class="footer-h2">Обзоры популярных направлений</h2>
             
