--- a/blogs/flightticket.html
+++ b/blogs/flightticket.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style/article-1/article-1.css" />
+    <link rel="stylesheet" href="../styles/global-styles/footer/footer.style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
@@ -267,7 +268,7 @@
     <!-- = = = = = = FOOTER = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =-->
 
     <footer class="center footer">
-      <div class="inner footer-inner">
+      <div class="footer-inner">
         <div class="footer-col-1">
           <h2 class="footer-h2">Обзоры популярных направлений</h2>
 
