--- a/blogs/thailand-travel.html
+++ b/blogs/thailand-travel.html
@@ -9,6 +9,7 @@
       островов, достопримечательностей, поиск жилья, стоимость отдыха."
     />
     <link rel="stylesheet" href="./style/pattaya/pattaya.css" />
+    <link rel="stylesheet" href="../styles/global-styles/footer/footer.style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
@@ -834,7 +835,7 @@
     <!-- = = = = = = FOOTER = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =-->
 
     <footer class="center footer">
-      <div class="inner footer-inner">
+      <div class="footer-inner">
         <div class="footer-col-1">
           <h2 class="footer-h2">Обзоры популярных направлений</h2>
 
