--- a/personal-data.html
+++ b/personal-data.html
@@ -9,6 +9,7 @@
       авиабилетов и отелей Y-Flights"
     />
     <link rel="stylesheet" href="./styles/personal-data/personal-data.css" />
+    <link rel="stylesheet" href="./styles/global-styles/footer/footer.style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
