--- a/blogs/Thailand.html
+++ b/blogs/Thailand.html
@@ -481,9 +481,9 @@
                 </ul>
               </div>
               <div class="footer-col-2-last-div">
-                <a href="./sitemap" class="link-h5 link-spacer">Карта сайта</a>
-                <a href="./personal-data" class="link-h5 link-spacer">Политика конфиденциальности</a>
-                <a href="./terms-of-use" class="link-h5 link-spacer">Правила пользования</a>
+                <a href="../sitemap" class="link-h5 link-spacer">Карта сайта</a>
+                <a href="../." class="link-h5 link-spacer">Политика конфиденциальности</a>
+                <a href="../terms-of-use" class="link-h5 link-spacer">Правила пользования</a>
               </div>
           </div>
           
