--- a/blogs/Bali.html
+++ b/blogs/Bali.html
@@ -640,7 +640,7 @@
           </div>
           <div class="footer-col-2-last-div">
             <a href="../sitemap" class="link-h5 link-spacer">Карта сайта</a>
-            <a href="../personal-data.html" class="link-h5 link-spacer">
+            <a href="../personal-data" class="link-h5 link-spacer">
               Политика конфиденциальности
             </a>
             <a href="../terms-of-use" class="link-h5 link-spacer">
