added new inter link

--- a/blogs/thailand-travel.html
+++ b/blogs/thailand-travel.html
@@ -405,16 +405,16 @@
         </div>
 
         <p class="p">
-          Отдых в Таиланде можно спланировать по-разному. Самый банальный
+          <a href="./Thailand" class="text-link">Отдых в Таиланде</a> можно спланировать по-разному. Самый банальный
           вариант —приобрести пакетный или горящий тур на 7-14 дней. Как
           правило, туристы проводят время на каком-нибудь известном курорте,
           например, в Паттайе или на островах Самуи и Пхукет. Довольно просто
-          организовать поездку самостоятельно без запятой без услуг
-          туроператора. Достаточно купить авиабилеты до Бангкока, прилететь туда
-          без запятой и потом уже использовать столицу как отправной пункт для
+          организовать поездку самостоятельно без услуг
+          туроператора. Достаточно <a href="../" class="text-link">купить авиабилеты</a> до Бангкока, прилететь туда
+          и потом уже использовать столицу как отправной пункт для
           перемещения по королевству. Для этого можно воспользоваться
-          автобусами, самолетами и поездами. Для поиска отелей пригодятся сайты
-          по бронированию. Иногда достаточно просто погулять по курорту и
+          автобусами, самолетами и поездами. Для поиска отелей
+          можете воспользоваться <a href="../" class="text-link">нашим сервисом</a>. Иногда достаточно просто погулять по курорту и
           поискать свободные места в отелях либо хостелах.
         </p>
 
@@ -464,8 +464,9 @@
           из-за плохого курса. По стране проще всего перемещаться на воздушном
           транспорте. Это быстро и дешево благодаря наличию в Таиланде
           собственных бюджетных авиакомпаний, таких как Nok и Air Asia. Купить
-          авиабилеты на рейсы местных авиалиний вы можете на нашем сервисе
-          поиска авиабилетов и отелей Y-Flights.
+          авиабилеты на рейсы местных авиалиний вы можете на нашем <a href="../" class="text-link">сервисе
+            поиска авиабилетов и отелей Y-Flights.</a>
+          
         </p>
 
         <div class="section-1-img-wrapper">
@@ -513,7 +514,7 @@
           острове живут китайцы, тайцы, мусульмане-малайцы и некоторое
           количество русскоязычных граждан с долгими визами. Следовательно, есть
           с кем пообщаться на родном языке. На острове можно купаться, загорать,
-          посещать достопримечательности и заниматься серфингом. Остров Пхукет,
+          посещать достопримечательности и заниматься серфингом. <a href="./Phuket" class="text-link">Остров Пхукет</a>,
           возможно, не понравится тем, кто не любит толпы туристов. Если
           посмотреть на карту Таиланда, то можно заметить, что на полпути от
           столицы к острову находится город Прачуапкхирикхан. Вот его стоит
@@ -532,7 +533,7 @@
         </div>
 
         <p class="p">
-          Пляжи Пхукета делятся на платные и бесплатные. На восточном побережье
+          <a href="./phuket-beach" class="text-link">Пляжи Пхукета</a> делятся на платные и бесплатные. На восточном побережье
           острова туристы отдыхают редко. Лучшие территории расположены на
           западном берегу, такие как:
         </p>
@@ -560,7 +561,7 @@
         <h3 class="h3">Выбор жилья на острове</h3>
 
         <p class="p">
-          Отдых на Пхукете может растянуться надолго. Некоторые иностранцы живут
+          <a href="./Phuket" class="text-link">Отдых на Пхукете</a> может растянуться надолго. Некоторые иностранцы живут
           на острове месяцами и даже годами. Снять квартиру реально за 10-25
           тыс. бат в месяц. В сезон дождей цены ниже, зимой — выше. Если вам
           интересен дешевый ночлег, то лучше всего поселиться в хостел.
@@ -630,7 +631,7 @@
         </div>
 
         <p class="p">
-          Если турист прилетел в Бангкок, то до Пхукета можно доехать на ночном
+          Если турист <a href="./Bangkok" class="text-link">прилетел в Бангкок</a>, то до Пхукета можно доехать на ночном
           автобусе за 12 часов. Стоимость билетов — от 600 бат. 800-километровая
           дорога представляет собой трассу №4. Въезд на остров по мосту Сарасин.
           Главной дорогой Пхукета является трасса №402. Также она ведет в
@@ -848,7 +849,7 @@ mp;marker=7.947610386051736%2C98.3305549621582"
 
         <h3 class="h3">Как добраться до курорта</h3>
         <p class="p">
-          Самолетом можно прилететь внутренним рейсом из Бангкока, а также
+          Самолетом можно прилететь внутренним <a href="./" class="text-link">рейсом из Бангкока</a>, а также
           международными из нескольких городов Китая, России, Малайзии,
           Сингапура и Катара. Железной дороги до Краби не провели, поэтому нужно
           ехать на поезде из Бангкока до станции Транг, а потом на автобусе до
@@ -1079,7 +1080,7 @@ mp;marker=7.947610386051736%2C98.3305549621582"
 
         <p class="p">
           Остров Самуи расположен в Южно-Китайском море в 30 километрах от
-          материка и в 700 километрах от столицы Таиланда Бангкока . Он занимает
+          материка и в 700 километрах <a href="./Bangkok" class="text-link">от столицы Таиланда Бангкока</a>. Он занимает
           первое место по популярности у русскоязычных туристов и второе — по
           площади в Таиланде после Пхукета. По сравнению с последним, на нем
           меньше тайского колорита. Он подойдет туристам, которые любят отдыхать
@@ -1238,10 +1239,10 @@ mp;marker=7.947610386051736%2C98.3305549621582"
 
         <h3 class="h3">Описание курорта</h3>
         <p class="p">
-          Паттайю можно считать едва ли не самым знаменитым местом отдыха
+          <a href="./pattaya" class="text-link">Паттайю можно считать</a> едва ли не самым знаменитым местом отдыха
           Таиланда. Он расположен не далеко от столицы. Добираться до него
           проще, чем до вышеперечисленных курортов. Недостатков у курорта
-          хватает. Качество пляжей Паттайи не самое высокое. Возможно, отдыху
+          хватает. Качество <a href="./pattaya" class="text-link">пляжей Паттайи</a> не самое высокое. Возможно, отдыху
           мешает секс-индустрия, отсутствие тайского национального колорита и
           цены на отели. К плюсам следует отнести близость к Бангкоку, соседство
           с островом Лан и разнообразие музеев, которых в тайских городах
@@ -1344,7 +1345,7 @@ mp;marker=7.947610386051736%2C98.3305549621582"
           англоязычные.
           <br />
           <br />
-          Некоторые достопримечательности Паттайи относятся к уникальным. Их
+          Некоторые <a href="./pattaya" class="text-link">достопримечательности Паттайи</a> относятся к уникальным. Их
           аналогов нет в других странах региона. Для иностранцев цены достаточно
           высокие. За 500 бат можно посетить храм Истины. Он открыт с 8 утра до
           17:00. С детьми стоит сходить в парк Mini Siam, где представлены
