--- a/blogs/thailand-travel.html
+++ b/blogs/thailand-travel.html
@@ -153,7 +153,7 @@
           <li class="section-1-li">Боря Ф</li>
         </ul>
 
-        <div class="content-title-container">
+        <!-- <div class="content-title-container">
           <span id="content-header" class="section-1-h2 spacer-vertical-1rem">
             Содержание
           </span>
@@ -392,7 +392,7 @@
               </ul>
             </li>
           </ol>
-        </div>
+        </div> -->
 
         <h2 class="section-1-h2">Описание курорта</h2>
 
