--- a/blogs/thailand-travel.html
+++ b/blogs/thailand-travel.html
@@ -140,7 +140,7 @@
           </ul>
         </div>
       </nav>
-      <h1 class="header-h1">Курорты Тайланда</h1>
+      <h1 class="header-h1">5 популярных курортов Таиланда</h1>
     </header>
 
     <section class="center section-1">
