--- a/tours.html
+++ b/tours.html
@@ -257,7 +257,7 @@
                   class="section-6-img"
                 />
                 <div class="section-6-text-container">
-                  <h3 class="section-6-h3">Курорты Тайланда</h3>
+                  <h3 class="section-6-h3">5 популярных курортов Таиланда</h3>
                   <a href="./blogs/thailand-travel" class="section-6-a">Читать далее</a>
                   <!-- <a href="" class="section-6-a">- Блог</a> -->
                 </div>
