edited phuket article

--- a/blogs/Phuket.html
+++ b/blogs/Phuket.html
@@ -158,64 +158,64 @@
           <ol class="content-title-ol-main">
             <!-- 1 -->
             <li class="content-title-li-main">
-              <a href="" class="text-link"> Краткий обзор острова Пхукет </a>
+              <a href="#Краткий-обзор-острова-Пхукет" class="text-link"> Краткий обзор острова Пхукет </a>
             </li>
             <!-- 2 -->
             <li class="content-title-li-main">
-              <a href="" class="text-link">
+              <a href="#Подготовка-к-путешествию-в-Таиланд" class="text-link">
                 Подготовка к путешествию в Таиланд:
               </a>
               <ul class="content-title-ul-sub">
                 <li class="content-title-li-sub margin-left-3rem">
                   2.1
-                  <a href="" class="text-link"
+                  <a href="#Почему-стоит-поехать-на-Пхукет" class="text-link"
                     >Почему стоит поехать на Пхукет</a
                   >
                 </li>
                 <li class="content-title-li-sub margin-left-3rem">
-                  2.2 <a href="" class="text-link">Когда ехать</a>
+                  2.2 <a href="#Когда-ехать" class="text-link">Когда ехать</a>
                 </li>
                 <li class="content-title-li-sub margin-left-3rem">
-                  2.3 <a href="" class="text-link">Как добраться</a>
+                  2.3 <a href="#Как-добраться" class="text-link">Как добраться</a>
                 </li>
                 <li class="content-title-li-sub margin-left-3rem">
                   2.4
-                  <a href="" class="text-link">Какой пляж Пхукета выбрать</a>
+                  <a href="#Какой-пляж-Пхукета-выбрать" class="text-link">Какой пляж Пхукета выбрать</a>
                 </li>
                 <li class="content-title-li-sub margin-left-3rem">
-                  2.5 <a href="" class="text-link">Какое выбрать жилье</a>
+                  2.5 <a href="#Какое-выбрать-жилье" class="text-link">Какое выбрать жилье</a>
                 </li>
               </ul>
             </li>
             <!-- 3 -->
             <li class="content-title-li-main">
-              <a href="" class="text-link"> Отдых на острове: </a>
+              <a href="#Отдых-на-острове" class="text-link"> Отдых на острове: </a>
 
               <ul class="content-title-ul-sub">
                 <li class="content-title-li-sub margin-left-3rem">
-                  3.1 <a href="" class="text-link">Трансфер в отель</a>
+                  3.1 <a href="Трансфер-в-отель" class="text-link">Трансфер в отель</a>
                 </li>
                 <li class="content-title-li-sub margin-left-3rem">
-                  3.2 <a href="" class="text-link">Городской транспорт</a>
+                  3.2 <a href="#Городской-транспорт" class="text-link">Городской транспорт</a>
                 </li>
                 <li class="content-title-li-sub margin-left-3rem">
                   3.3
-                  <a href="" class="text-link"
+                  <a href="#Достопримечательности-и-чем-заняться" class="text-link"
                     >Достопримечательности и чем заняться</a
                   >
                 </li>
                 <li class="content-title-li-sub margin-left-3rem">
-                  3.4 <a href="" class="text-link">Питание на острове</a>
+                  3.4 <a href="#Питание-на-острове" class="text-link">Питание на острове</a>
                 </li>
                 <li class="content-title-li-sub margin-left-3rem">
-                  3.5 <a href="" class="text-link">Пхукет на карте</a>
+                  3.5 <a href="#Пхукет-на-карте" class="text-link">Пхукет на карте</a>
                 </li>
               </ul>
             </li>
           </ol>
         </div>
 
-        <h2 class="h2">Краткий обзор острова Пхукет</h2>
+        <h2 id="Краткий-обзор-острова-Пхукет" class="h2">Краткий обзор острова Пхукет</h2>
 
         <div class="section-1-img-wrapper">
           <img
@@ -262,9 +262,9 @@
           о жизни на острове.
         </p>
 
-        <h2 class="h2">Подготовка к путешествию в Таиланд</h2>
+        <h2 id="Подготовка-к-путешествию-в-Таиланд" class="h2">Подготовка к путешествию в Таиланд</h2>
 
-        <h3 class="h3">Почему стоит поехать на Пхукет</h3>
+        <h3 id="Почему-стоит-поехать-на-Пхукет" class="h3">Почему стоит поехать на Пхукет</h3>
 
         <p class="p">
           Пхукет привлекает туристов не только своей красотой и отличными
@@ -308,7 +308,7 @@
           занятий, как, например, сноркелинг.
         </p>
 
-        <h3 class="h3">Когда ехать</h3>
+        <h3 id="Когда-ехать" class="h3">Когда ехать</h3>
 
         <p class="p">
           Практически весь год на Пхукете жарко и влажно. Но в выборе дат
@@ -472,7 +472,7 @@
           Обязательно учитывайте эти факторы при выборе времени для путешествия.
         </p>
 
-        <h3 class="h3">Как добраться</h3>
+        <h3 id="Как-добраться" class="h3">Как добраться</h3>
         <p class="p">
           Самый простой, но не самый бюджетный способ –
           <a href="../" class="text-link">прямые рейсы «Аэрофлота»</a>. Часто
@@ -487,7 +487,7 @@
           впечатление даже от самого прекрасного отпуска.
         </p>
 
-        <h3 class="h3">Какой пляж Пхукета выбрать</h3>
+        <h3 id="Какой-пляж-Пхукета-выбрать" class="h3">Какой пляж Пхукета выбрать</h3>
 
         <div class="section-1-img-wrapper">
           <img
@@ -559,7 +559,7 @@
           придется ездить на соседние пляжи.
         </p>
 
-        <h3 class="h3">Какое выбрать жилье</h3>
+        <h3 id="Какое-выбрать-жилье" class="h3">Какое выбрать жилье</h3>
 
         <div class="section-1-img-wrapper">
           <img
@@ -602,9 +602,9 @@
           Пользуйтесь услугами только проверенных сервисов.
         </p>
 
-        <h2 class="h2">Отдых на острове</h2>
+        <h2 id="Отдых-на-острове" class="h2">Отдых на острове</h2>
 
-        <h3 class="h3">Трансфер в отель</h3>
+        <h3 id="Трансфер-в-отель" class="h3">Трансфер в отель</h3>
 
         <p class="p">
           Международный аэропорт на Пхукете расположен в удалении от курортов, в
@@ -645,7 +645,7 @@
           – меньше часа, 40-50 минут.
         </p>
 
-        <h3 class="h3">Городской транспорт</h3>
+        <h3 id="Городской-транспорт" class="h3">Городской транспорт</h3>
 
         <p class="p">
           Для перемещений по курорту туристы часто арендуют скутер, который чаще
@@ -702,7 +702,7 @@
           это стоит 100 бат в час, при заказе от 7-8 часов.
         </p>
 
-        <h3 class="h3">Достопримечательности и чем заняться</h3>
+        <h3 id="Достопримечательности-и-чем-заняться" class="h3">Достопримечательности и чем заняться</h3>
 
         <div class="section-1-img-wrapper">
           <img
@@ -743,7 +743,7 @@
           пощекотать нервы остров может предложить троллей и джампинг.
         </p>
 
-        <h3 class="h3">Питание</h3>
+        <h3 id="Питание-на-острове" class="h3">Питание</h3>
 
         <div class="section-1-img-wrapper">
           <img
@@ -800,7 +800,7 @@
           напитки оплачиваются отдельно.
         </p>
 
-        <h3 class="h3">Пхукет на карте</h3>
+        <h3 id="Пхукет-на-карте" class="h3">Пхукет на карте</h3>
 
         <p class="p">
           Карта острова Пхукет поможет вам сориентироваться при планировании
