edited phuket article

--- a/blogs/Phuket.html
+++ b/blogs/Phuket.html
@@ -25,7 +25,7 @@
       rel="stylesheet"
     />
     <link rel="icon" href="../favicon.ico" type="image/x-icon" />
-    <title>ТОстров Пхукет от А до Я, путеводитель для туристов</title>
+    <title>Остров Пхукет от А до Я, путеводитель для туристов</title>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <!-- Yandex.Metrika counter -->
     <script defer type="text/javascript">
