--- a/404.html
+++ b/404.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/404/404.styles.css">
+    <link rel="stylesheet" href="/styles/404/404.styles.css">
     <title>Page not found</title>
 </head>
 <body>
    <div class="container">
-        <img src="./assets/404_2.svg" alt="Page not found" class="main-img">
-        <a href="./" class="return-btn">Return To Home</a>
+        <img src="/assets/404_2.svg" alt="Page not found" class="main-img">
+        <a href="/" class="return-btn">Return To Home</a>
    </div>
 </body>
 </html>
